--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,17 +1,24 @@
 # Use the official Python image from the Docker Hub
 FROM python:3.9-slim
 
-# Set the working directory in the container
+# Set the working directory
 WORKDIR /app
 
 # Copy the requirements file into the container
-COPY requirements.txt .
+COPY requirements.txt /app/
 
-# Install any dependencies
+# Copy the current directory contents into the container at /app
+COPY . /app
+
+# Copy the .env file
+COPY .env /app/.env
+
+# Install the dependencies
 RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install watchdog
 
-# Copy the rest of the application code into the container
-COPY . .
+# Expose port 8000
+EXPOSE 8000
 
-# Command to run the FastAPI application using uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
+# Command to run the FastAPI application with auto-reload
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
